# automateTimesheet

./: pyproject.toml
